# stock-market-simulator

./: CMakeLists.txt  README.md  performance_log.csv  pyproject.toml  setup.py  streamlit_app.py
cpp/include/: market_data.h  mcmc_engine.h  portfolio.h  risk_analysis.h
cpp/src/: market_data.cpp  mcmc_engine.cpp  portfolio.cpp  risk_analysis.cpp
examples/: advanced_analysis.py  basic_simulation.py
python/: __init__.py  simulator.py  utils.py
python/bindings/: pybind_module.cpp
stock_market_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_mcmc_engine.py  test_utils.py
